WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50141
[Qt] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
https://bugs.webkit.org/show_bug.cgi?id=50141
Summary
[Qt] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
Helder Correia
Reported
2010-11-29 01:16:21 PST
The shadows should not be affected by the canvas scaling.
Attachments
Patch
(10.93 KB, patch)
2010-11-29 01:22 PST
,
Helder Correia
no flags
Details
Formatted Diff
Diff
m_originalLayerRect -> m_unscaledLayerRect
(10.93 KB, patch)
2010-11-29 01:47 PST
,
Helder Correia
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2010-11-29 01:22:48 PST
Created
attachment 74998
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2010-11-29 01:35:08 PST
Comment on
attachment 74998
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=74998&action=review
> WebCore/platform/graphics/ContextShadow.h:125 > + FloatRect m_originalLayerRect;
unscaledLayerRect?
Helder Correia
Comment 3
2010-11-29 01:47:08 PST
Created
attachment 75001
[details]
m_originalLayerRect -> m_unscaledLayerRect
WebKit Commit Bot
Comment 4
2010-11-29 02:12:20 PST
Comment on
attachment 75001
[details]
m_originalLayerRect -> m_unscaledLayerRect Clearing flags on attachment: 75001 Committed
r72784
: <
http://trac.webkit.org/changeset/72784
>
WebKit Commit Bot
Comment 5
2010-11-29 02:12:25 PST
All reviewed patches have been landed. Closing bug.
WebKit Review Bot
Comment 6
2010-11-29 03:03:10 PST
http://trac.webkit.org/changeset/72784
might have broken GTK Linux 32-bit Release and GTK Linux 64-bit Debug The following tests are not passing: fast/canvas/canvas-scale-fillRect-shadow.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug