2010-11-29  Helder Correia  <helder@sencha.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
        https://bugs.webkit.org/show_bug.cgi?id=50141

        New fast canvas test to ensure correct fillRect shadow when using
        ctx.scale(x,y).

        * fast/canvas/canvas-scale-fillRect-shadow-expected.txt: Added.
        * fast/canvas/canvas-scale-fillRect-shadow.html: Added.
        * fast/canvas/script-tests/canvas-scale-fillRect-shadow.js: Added.
2010-11-29  Helder Correia  <helder@sencha.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
        https://bugs.webkit.org/show_bug.cgi?id=50141

        Don't apply scaling transformation to shadow offsets.

        Test: fast/canvas/canvas-scale-fillRect-shadow.html

        * platform/graphics/ContextShadow.h:
        * platform/graphics/qt/ContextShadowQt.cpp:
        (WebCore::ContextShadow::beginShadowLayer):
        (WebCore::ContextShadow::endShadowLayer):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::fillRect):

Canonical link: https://commits.webkit.org/63243@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72784 268f45cc-cd09-0410-ab3c-d52691b4dbfc