WebCore/platform/graphics/ContextShadow.h
@@ -120,6 +120,11 @@ private:
     PlatformImage m_layerImage;
     PlatformContext m_layerContext;
 
+#if PLATFORM(QT)
+    // Used for reference when canvas scale(x,y) was called.
+    FloatRect m_unscaledLayerRect;
+#endif
+
     void blurLayerImage(unsigned char*, const IntSize& imageSize, int stride);
     void calculateLayerBoundingRect(const FloatRect& layerArea, const IntRect& clipRect);
 #if PLATFORM(CAIRO)
